@@ -1,3 +1,14 @@
+# Next version
+
+- The original expressions for constant array sizes can be obtained with
+  Clang.Decl.get_size_expr and Clang.Parameter.get_size_expr.
+  (suggested by Damien Rouhling)
+
+- Bug-fix: Constant array sizes are no longer reported as default values for
+  parameters.
+
+- Ignore decorations in Clangml__compare
+
 # 2019-09-30, 4.0.1
 
 - Support for Clang/LLVM 9.0
